# mafia_service_discovery

./: .dockerignore  Dockerfile  README.md  TEST_SUITE_SUMMARY.md  docker-compose.yml  example_topic_registration.py  example_usage.py  flake.nix  grafana-dashboard.json  pyproject.toml  pytest.ini  run_tests.py  simple_test.py  test_service_discovery.py  test_topics_manual.py
.direnv/: flake-profile-1-link  flake-profile-3-link  flake-profile-5-link
.github/workflows/: docker-publish.yml
scripts/: publish_latest.sh
service_discovery/: __init__.py  client.py  config.py  constants.py  health_monitor.py  health_utils.py  logger_config.py  main.py  registry.py  routers.py  types.py
service_discovery/api/: __init__.py  routes.py
service_discovery/service_registration/: __init__.py  health_endpoints.py  health_monitor.py  health_utils.py  registry.py
tests/: README.md  conftest.py  test_client.py  test_grpc_and_instance_url.py  test_health_monitoring.py  test_integration_new_fields.py  test_service_discovery.py  test_topic_subscriptions.py
