[project]
name = "mafia_service_discovery"
version = "0.1.0"
description = "Service discovery for Mafia game platform"
authors = [{ name = "Flexksx", email = "cristian.cretu2808@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi (>=0.118.2,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "pydantic (>=2.12.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "psutil (>=6.1.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mafia_service_discovery"
version = "0.1.0"
description = "Service Discovery for Mafia Platform"
packages = [{ include = "service_discovery" }]

[tool.poetry.scripts]
start = "service_discovery.main:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
